--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,11 @@
 {
-  "singleQuote": true
+  "semi": true,
+  "trailingComma": "all",
+  "useTabs": false,
+  "tabWidth": 2,
+  "singleQuote": true,
+  "printWidth": 140,
+  "arrowParens": "avoid",
+  "proseWrap": "preserve",
+  "bracketSpacing": true
 }
