--- a/apps/nasa-images/project.json
+++ b/apps/nasa-images/project.json
@@ -78,7 +78,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/nasa-images"],
+      "outputs": ["{workspaceRoot}/coverage/apps/nasa-images"],
       "options": {
         "jestConfig": "apps/nasa-images/jest.config.ts",
         "passWithNoTests": true
