feat(shared): #10 add footer library

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,7 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
+      "@plastikspace/shared-footer": ["libs/shared/ui-footer/src/index.ts"],
       "@plastikspace/shared/header": ["libs/shared/header/src/index.ts"]
     }
   },
