--- a/libs/shared/ui-header/project.json
+++ b/libs/shared/ui-header/project.json
@@ -1,22 +1,22 @@
 {
-  "name": "shared-header",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+  "name": "shared-ui-header",
   "projectType": "library",
-  "sourceRoot": "libs/shared/header/src",
+  "sourceRoot": "libs/shared/ui-header/src",
   "prefix": "plastikspace",
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/header/jest.config.ts",
+        "jestConfig": "libs/shared/ui-header/jest.config.ts",
         "passWithNoTests": true
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": ["libs/shared/header/**/*.ts", "libs/shared/header/**/*.html"]
+        "lintFilePatterns": ["libs/shared/ui-header/**/*.ts", "libs/shared/ui-header/**/*.html"]
       }
     }
   },
