feat(shared): #9 add router state configuration lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,7 @@
     "baseUrl": ".",
     "paths": {
       "@plastikspace/environments": ["libs/environments/src/index.ts"],
+      "@plastikspace/router-state": ["libs/router-state/src/index.ts"],
       "@plastikspace/shared-footer": ["libs/shared/ui-footer/src/index.ts"],
       "@plastikspace/shared-header": ["libs/shared/ui-header/src/index.ts"]
     }
