--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
     "@angular/platform-browser": "15.0.0",
     "@angular/platform-browser-dynamic": "15.0.0",
     "@angular/router": "15.0.0",
+    "@ngrx/effects": "^14.3.2",
+    "@ngrx/entity": "^14.3.2",
+    "@ngrx/router-store": "^14.3.2",
+    "@ngrx/store": "^14.3.2",
     "@nrwl/angular": "15.2.1",
     "angular-svg-icon": "^14.0.0",
     "rxjs": "~7.5.0",
@@ -72,6 +76,8 @@
     "@angular/language-service": "15.0.0",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@ngrx/schematics": "^14.3.2",
+    "@ngrx/store-devtools": "^14.3.2",
     "@nrwl/cli": "15.2.1",
     "@nrwl/cypress": "15.2.1",
     "@nrwl/eslint-plugin-nx": "15.2.1",
