feat(shared): #42 add utils object library

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,7 +23,8 @@
       "@plastikspace/environments": ["libs/environments/src/index.ts"],
       "@plastikspace/router-state": ["libs/router-state/src/index.ts"],
       "@plastikspace/shared-footer": ["libs/shared/ui-footer/src/index.ts"],
-      "@plastikspace/shared-header": ["libs/shared/ui-header/src/index.ts"]
+      "@plastikspace/shared-header": ["libs/shared/ui-header/src/index.ts"],
+      "@plastikspace/shared-utils/objects": ["libs/shared/utils/objects/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
