style: #44 add eslint deprecation lint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "root": true,
   "ignorePatterns": ["**/*"],
-  "plugins": ["@nrwl/nx"],
+  "plugins": ["@nrwl/nx", "deprecation"],
   "parserOptions": {
     "project": ["./tsconfig.base.json"]
   },
@@ -50,6 +50,12 @@
         "jest": true
       },
       "rules": {}
+    },
+    {
+      "files": ["*.ts", "*.tsx"],
+      "rules": {
+        "deprecation/deprecation": "warn"
+      }
     }
   ]
 }
