--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-deprecation": "^1.3.3",
+    "eslint-plugin-jsdoc": "^39.6.4",
     "eslint-plugin-ngrx": "^2.1.4",
     "husky": "^8.0.0",
     "jest": "28.1.1",
