docs: #18 clean up the root readme
add badges, installation instructions, commands, apps and libs list, contact information and FAQ

--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
+    "husky-install": "husky install",
     "clean": "rimraf node_modules",
     "clean:all": "rimraf node_modules dist dll && yarn cache clean --force",
     "clean:dist": "rimraf dist",
-    "install:local": "yarn clean:all && yarn install --frozen-lockfile",
+    "install:local": "yarn husky-install && yarn clean:all && yarn install --frozen-lockfile",
     "nasa-images:serve": "nx run nasa-images:serve",
     "nasa-images:serve-version": "nx run nasa-images:serve-version",
     "nasa-images:lint": "nx run nasa-images:lint",
