--- a/package.json
+++ b/package.json
@@ -39,9 +39,8 @@
     "clean:dist": "rimraf dist",
     "install:local": "yarn husky-install && yarn clean:all && yarn install --frozen-lockfile",
     "nasa-images:serve": "nx run nasa-images:serve",
-    "nasa-images:serve-version": "nx run nasa-images:serve-version",
     "nasa-images:lint": "nx run nasa-images:lint",
-    "nasa-images:build": "yarn git-info && nx run nasa-images:build --parallel",
+    "nasa-images:build": "nx run nasa-images:build --parallel",
     "nasa-images:test": "nx run nasa-images:test",
     "nasa-images:e2e": "nx run nasa-images-e2e:e2e"
   },
@@ -75,8 +74,8 @@
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "15.0.0",
     "@angular/language-service": "15.0.0",
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@ngrx/schematics": "15.0.0",
     "@ngrx/store-devtools": "15.0.0",
     "@nrwl/cli": "15.3.3",
@@ -90,16 +89,17 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.0",
-    "commitizen": "^4.2.5",
+    "commitizen": "^4.2.6",
     "cypress": "^11.0.0",
     "cz-customizable": "^7.0.0",
+    "cz-customizable-ghooks": "^2.0.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-deprecation": "^1.3.3",
     "eslint-plugin-jsdoc": "^39.6.4",
     "eslint-plugin-ngrx": "^2.1.4",
-    "husky": "^8.0.0",
+    "husky": "^8.0.2",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
