--- a/package.json
+++ b/package.json
@@ -46,47 +46,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~15.1.0",
-    "@angular/cdk": "15.1.0",
-    "@angular/common": "~15.1.0",
-    "@angular/compiler": "~15.1.0",
-    "@angular/core": "~15.1.0",
-    "@angular/forms": "~15.1.0",
-    "@angular/material": "15.1.0",
-    "@angular/platform-browser": "~15.1.0",
-    "@angular/platform-browser-dynamic": "~15.1.0",
-    "@angular/router": "~15.1.0",
-    "@ngrx/component": "^15.1.0",
-    "@ngrx/component-store": "~15.0.0",
-    "@ngrx/effects": "~15.0.0",
-    "@ngrx/entity": "~15.0.0",
-    "@ngrx/router-store": "~15.0.0",
-    "@ngrx/store": "~15.0.0",
-    "@nrwl/angular": "15.5.2",
+    "@angular/animations": "15.2.1",
+    "@angular/cdk": "15.2.1",
+    "@angular/common": "15.2.1",
+    "@angular/compiler": "15.2.1",
+    "@angular/core": "15.2.1",
+    "@angular/forms": "15.2.1",
+    "@angular/material": "15.2.1",
+    "@angular/platform-browser": "15.2.1",
+    "@angular/platform-browser-dynamic": "15.2.1",
+    "@angular/router": "15.2.1",
+    "@ngrx/component": "15.3.0",
+    "@ngrx/component-store": "15.3.0",
+    "@ngrx/effects": "15.3.0",
+    "@ngrx/entity": "15.3.0",
+    "@ngrx/router-store": "15.3.0",
+    "@ngrx/store": "15.3.0",
+    "@ngx-formly/core": "^6.1.3",
+    "@ngx-formly/material": "^6.1.3",
+    "@nrwl/angular": "15.8.5",
     "angular-svg-icon": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.1.0",
-    "@angular-eslint/eslint-plugin": "~15.1.0",
-    "@angular-eslint/eslint-plugin-template": "~15.1.0",
-    "@angular-eslint/template-parser": "~15.1.0",
-    "@angular/cli": "~15.1.0",
-    "@angular/compiler-cli": "~15.1.0",
-    "@angular/language-service": "~15.1.0",
+    "@angular-devkit/build-angular": "15.2.1",
+    "@angular-devkit/core": "15.2.1",
+    "@angular-devkit/schematics": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "@angular/cli": "~15.2.0",
+    "@angular/compiler-cli": "15.2.1",
     "@commitlint/cli": "^17.4.0",
     "@commitlint/config-conventional": "^17.4.0",
-    "@ngrx/schematics": "~15.0.0",
-    "@ngrx/store-devtools": "~15.0.0",
-    "@nrwl/cli": "15.4.5",
-    "@nrwl/cypress": "15.4.5",
-    "@nrwl/eslint-plugin-nx": "15.4.5",
-    "@nrwl/jest": "15.5.2",
-    "@nrwl/linter": "15.4.5",
-    "@nrwl/workspace": "15.4.5",
-    "@types/jest": "28.1.1",
+    "@ngrx/schematics": "15.3.0",
+    "@ngrx/store-devtools": "15.3.0",
+    "@ngx-formly/schematics": "^6.1.3",
+    "@nrwl/cli": "15.8.5",
+    "@nrwl/cypress": "15.8.5",
+    "@nrwl/eslint-plugin-nx": "15.8.5",
+    "@nrwl/jest": "15.8.5",
+    "@nrwl/linter": "15.8.5",
+    "@nrwl/workspace": "15.8.5",
+    "@schematics/angular": "15.2.1",
+    "@types/jest": "29.4.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
@@ -103,15 +108,15 @@
     "eslint-plugin-ngrx": "^2.1.4",
     "husky": "^8.0.2",
     "jasmine-marbles": "~0.9.1",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "~12.2.3",
-    "nx": "15.5.2",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
+    "jest-preset-angular": "13.0.0",
+    "nx": "15.8.5",
     "postcss": "^8.4.21",
     "prettier": "^2.8.2",
-    "rimraf": "^3.0.2",
+    "rimraf": "^4.3.1",
     "tailwindcss": "^3.2.4",
-    "ts-jest": "28.0.5",
+    "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.9.4"
   },
