--- a/libs/shared/form/feature/project.json
+++ b/libs/shared/form/feature/project.json
@@ -1,23 +1,29 @@
 {
-  "name": "shared-table-ui",
+  "name": "shared-form-feature",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
-  "sourceRoot": "libs/shared/table/ui/src",
+  "sourceRoot": "libs/shared/form/feature/src",
   "prefix": "plastik",
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/table/ui/jest.config.ts",
+        "jestConfig": "libs/shared/form/feature/jest.config.ts",
         "passWithNoTests": true
+      },
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        }
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/shared/table/ui/**/*.ts", "libs/shared/table/ui/**/*.html"]
+        "lintFilePatterns": ["libs/shared/form/feature/**/*.ts", "libs/shared/form/feature/**/*.html"]
       }
     }
   },
