--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@nrwl/cypress": "15.8.5",
     "@nrwl/eslint-plugin-nx": "15.8.5",
     "@nrwl/jest": "15.8.5",
+    "@nrwl/js": "15.8.5",
     "@nrwl/linter": "15.8.5",
     "@nrwl/workspace": "15.8.5",
     "@schematics/angular": "15.2.1",
@@ -118,7 +119,7 @@
     "tailwindcss": "^3.2.4",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.5"
   },
   "config": {
     "commitizen": {
