feat(shared/activity/ui): #11 add a shared linear activity library
ISSUES CLOSED: #11

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,7 @@
               },
               {
                 "sourceTag": "scope:core",
-                "onlyDependOnLibsWithTags": ["scope:core", "type:entity", "type:util"]
+                "onlyDependOnLibsWithTags": ["scope:core", "type:entity", "type:util", "scope:shared"]
               },
               {
                 "sourceTag": "scope:shared",
