--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "15.2.1",
+    "@angular/language-service": "15.2.1",
     "@commitlint/cli": "^17.4.0",
     "@commitlint/config-conventional": "^17.4.0",
     "@ngrx/schematics": "15.3.0",
