--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "nasa-images:lint": "nx run nasa-images:lint",
     "nasa-images:build": "nx run nasa-images:build --parallel",
     "nasa-images:test": "nx run nasa-images:test",
-    "nasa-images:e2e": "nx run nasa-images-e2e:e2e"
+    "nasa-images:e2e": "nx run nasa-images-e2e:e2e",
+    "branch:lint": "branch-name-lint branchNameLint.json"
   },
   "private": true,
   "dependencies": {
@@ -98,6 +99,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.13",
+    "branch-name-lint": "^2.1.1",
     "commitizen": "^4.2.6",
     "cypress": "^12.2.0",
     "cz-customizable": "^7.0.0",
