--- a/package.json
+++ b/package.json
@@ -6,25 +6,25 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
-    "build": "nx build",
+    "build": "nx run-many --target=build --all --parallel",
     "test": "nx test",
     "test:watch": "nx test --watch",
     "test:coverage": "nx test --coverage",
-    "test:all": "nx run-many --all --target=test --ci --passWithNoTests --parallel --max-parallel=3 --run-in-band --coverage",
-    "test:ci": "nx affected --target=test --base=remotes/origin/main --parallel",
+    "test:all": "nx run-many --all --target=test --ci --passWithNoTests --parallel --max-parallel=3 --run-in-band --coverage --max-warnings=0",
+    "test:ci": "nx affected --target=test --base=remotes/origin/develop --parallel",
     "lint": "nx lint",
-    "lint:all": "nx run-many --all --target=lint --parallel --max-parallel=3",
-    "lint:ci": "nx affected --target=lint --base=remotes/origin/main --head=HEAD --parallel",
+    "lint:all": "nx run-many --all --target=lint --parallel --max-parallel=3 --max-warnings=0",
+    "lint:ci": "nx affected --target=lint --base=remotes/origin/develop --head=HEAD --parallel",
     "e2e": "ng e2e",
     "e2e:all": "nx run-many --all --target=e2e --headed=false --watch=false --parallel",
-    "e2e:ci": "nx affected --target=e2e --base=remotes/origin/main --parallel --headed=false --watch=false",
+    "e2e:ci": "nx affected --target=e2e --base=remotes/origin/develop --parallel --headed=false --watch=false",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
-    "affected:build": "nx affected:build",
+    "affected:build": "nx affected:build --configuration=production",
     "affected:e2e": "nx affected:e2e",
     "affected:e2e:watch": "nx affected:e2e --watch",
-    "affected:test": "nx affected:test --parallel --max-parallel=3 --run-in-band",
-    "affected:lint": "nx affected:lint --parallel --max-parallel=3 --verbose --cache",
+    "affected:test": "nx affected:test --parallel --max-parallel=3 --run-in-band --max-warnings=0",
+    "affected:lint": "nx affected:lint --parallel --max-parallel=3 --verbose --cache --max-warnings=0",
     "affected:dep-graph": "nx affected:dep-graph",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
@@ -66,6 +66,7 @@
     "@ngx-formly/core": "^6.1.3",
     "@ngx-formly/material": "^6.1.3",
     "@nrwl/angular": "15.8.5",
+    "@nrwl/nx-cloud": "^15.3.4",
     "angular-svg-icon": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
