--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clean:all": "rimraf node_modules dist dll && yarn cache clean --force",
     "clean:dist": "rimraf dist",
     "install:local": "yarn husky-install && yarn clean:all && yarn install --frozen-lockfile",
+    "markdownlint": "markdownlint *.md",
     "nasa-images:serve": "nx run nasa-images:serve",
     "nasa-images:lint": "nx run nasa-images:lint",
     "nasa-images:build": "nx run nasa-images:build --parallel",
@@ -116,6 +117,8 @@
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-preset-angular": "13.0.0",
+    "markdownlint": "^0.28.0",
+    "markdownlint-cli": "^0.33.0",
     "nx": "15.8.5",
     "postcss": "^8.4.21",
     "prettier": "^2.8.2",
