--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,6 @@ on:
 
 jobs:
   develop:
-    name: Markdownlint
-    uses: DavidAnson/markdownlint-cli2-action@v9
-    with:
-      command: config
-      globs: |
-        .markdownlint.json
-        **/*.md
-
     name: Nx Cloud - Main Job
     uses: nrwl/ci/.github/workflows/nx-cloud-main.yml@v0.11.3
     with:
@@ -23,10 +15,9 @@ jobs:
       init-commands: |
         yarn nx-cloud start-ci-run --stop-agents-after="build" --agent-count=8
       parallel-commands: |
-        yarn nx-cloud record -- yarn nx workspace-lint
         yarn nx-cloud record -- yarn nx format:check
+        yarn nx-cloud record -- yarn markdownlint
       parallel-commands-on-agents: |
-        yarn markdownlint
         yarn nx affected --target=lint --parallel=3
         yarn nx affected --target=test --parallel=3 --ci --code-coverage
         yarn nx affected --target=build --parallel=3
