ci(nasa-images): #131 add a CD build to github pages for develop branch
ISSUES CLOSED: #131

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   develop:
-    name: Nx Cloud - Main Job
+    name: nx-cloud
     uses: nrwl/ci/.github/workflows/nx-cloud-main.yml@v0.11.3
     with:
       number-of-agents: 8
