--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -1,10 +1,11 @@
 name: Deploy Develop to GitHub Pages
 
 on:
-  push:
+  workflow_run:
+    workflows: [nx-cloud]
     branches: ['develop']
-  pull_request:
-    branches: ['develop']
+    types:
+      - completed
 
 jobs:
   deploy:
@@ -15,13 +16,14 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Build app
-        run: yarn nx build nasa-images --prod --base-href /nasa-images/
+        run: yarn nx build nasa-images --prod
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist/apps/nasa-images
           publish_branch: nasa-images-staging-page
           cname: nasa-images-staging.plastikaweb.com
-          commit_message: 'Deploy nasa-images to GitHub Pages'
+          commit_message: 'Deploy staging nasa-images to GitHub Pages'
           enable_jekyll: false
