ci(nasa-images): #131 set cd-dev run after CI workflow is finished

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -2,7 +2,7 @@ name: Deploy Develop to GitHub Pages
 
 on:
   workflow_run:
-    workflows: [nx-cloud]
+    workflows: [CI]
     branches: ['develop']
     types:
       - completed
