--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,12 @@ on:
       - develop
   pull_request:
 
+env:
+  NX_CLOUD_DISTRIBUTED_EXECUTION: 'true'
+  NX_BRANCH: ${{github.event.number}}
+  NX_RUN_GROUP: ${{github.run_id}}
+  NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
+
 jobs:
   develop:
     name: nx-cloud
