ci(nasa-images): #137 add a build and deploy action for staging

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -1,29 +1,24 @@
-name: Deploy Develop to GitHub Pages
+name: Deploy Staging
 
 on:
   workflow_run:
     workflows: [CI]
-    branches: ['develop']
-    types:
-      - completed
+    types: [completed]
+    branches:
+      - 'develop'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: github.event.workflow_run.conclusion == 'success'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Build app
-        run: yarn nx build nasa-images --prod
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        if: ${{ github.ref == 'refs/heads/develop' }}
+        uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.4.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/apps/nasa-images
-          publish_branch: nasa-images-staging-page
-          cname: nasa-images-staging.plastikaweb.com
-          commit_message: 'Deploy staging nasa-images to GitHub Pages'
-          enable_jekyll: false
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          build_configuration: staging
+          base_href: ''
+          deploy_branch: nasa-images-staging-page
+          angular_dist_build_folder: dist/apps/nasa-images
