--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -20,12 +20,11 @@ jobs:
       - name: Create 404
         run: cp dist/apps/nasa-images/index.html dist/apps/nasa-images/404.html
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: AhsanAyaz/angular-deploy-gh-pages-actions@v3
         if: ${{ github.ref == 'refs/heads/develop' }}
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/apps/nasa-images
-          publish_branch: nasa-images-staging-page
-          cname: nasa-images-staging.plastikaweb.com
-          commit_message: 'Deploy staging nasa-images to GitHub Pages ${{github.event.repository.created_at}}'
-          enable_jekyll: false
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          build_configuration: staging
+          base_href: ''
+          angular_dist_build_folder: dist/apps/nasa-images
+          deploy_branch: nasa-images-staging-page
