--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -18,6 +18,6 @@ jobs:
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
           build_configuration: staging
-          base_href: ''
+          base_href: /nasa-images/
+          deploy_branch: gh-pages
           angular_dist_build_folder: dist/apps/nasa-images
-          deploy_branch: nasa-images-staging-page
