--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -17,7 +17,10 @@ jobs:
         uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.4.0
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
-          build_configuration: staging
+          build_configuration: production
           base_href: ''
           deploy_branch: nasa-images-staging-page
           angular_dist_build_folder: dist/apps/nasa-images
+
+permissions:
+  contents: write
