feat(nasa-images): #137 fdfaf

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -3,9 +3,9 @@ name: Deploy Staging
 on:
   workflow_run:
     workflows: [CI]
-    branches: ['develop']
-    types:
-      - completed
+    types: [completed]
+    branches:
+      - 'develop'
 
 jobs:
   deploy:
