feat(core/notification/data-access): #29 add a notification system with store segment
make the showNotification action to be fired on /search API requests

ISSUES CLOSED: #29

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,6 +28,8 @@
       "@plastik/core/cms-layout/sidenav": ["libs/core/cms-layout/ui/sidenav/src/index.ts"],
       "@plastik/core/entities": ["libs/core/entities/src/index.ts"],
       "@plastik/core/environments": ["libs/core/util/environments/src/index.ts"],
+      "@plastik/core/notification/data-access": ["libs/core/notification/data-access/src/index.ts"],
+      "@plastik/core/notification/entities": ["libs/core/notification/entities/src/index.ts"],
       "@plastik/core/router-state": ["libs/core/router/data-access/src/index.ts"],
       "@plastik/nasa-images/data-access": ["libs/nasa-images/data-access/src/index.ts"],
       "@plastik/nasa-images/faqs": ["libs/nasa-images/faqs/feature/src/index.ts"],
