--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@nrwl/linter": "15.8.5",
     "@nrwl/workspace": "15.8.5",
     "@schematics/angular": "15.2.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/jest": "29.4.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
