perf(nasa-images): #99 review accessibility issues and fix them
ISSUES CLOSED: #99

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -92,7 +92,6 @@
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:jsdoc/recommended"],
-
       "rules": {
         "jsdoc/match-description": [
           "error",
@@ -100,6 +99,43 @@
             "matchDescription": "/^[A-Z].+[.]/g"
           }
         ]
+      }
+    },
+    {
+      "files": ["*.html"],
+      "extends": ["plugin:@angular-eslint/template/recommended"],
+      "rules": {
+        "@angular-eslint/template/no-positive-tabindex": 2,
+        "@angular-eslint/template/no-autofocus": 2,
+        "@angular-eslint/template/mouse-events-have-key-events": 2,
+        "@angular-eslint/template/click-events-have-key-events": 2,
+        "@angular-eslint/template/accessibility-interactive-supports-focus": 2,
+        "@angular-eslint/template/accessibility-valid-aria": 2,
+        "@angular-eslint/template/accessibility-role-has-required-aria": 2,
+        "@angular-eslint/template/accessibility-label-for": 2,
+        "@angular-eslint/template/accessibility-label-has-associated-control": 2,
+        "@angular-eslint/template/accessibility-alt-text": 2,
+        "@angular-eslint/template/accessibility-elements-content": 2,
+        "@angular-eslint/template/accessibility-table-scope": 2,
+        "@angular-eslint/template/no-any": 2,
+        "@angular-eslint/no-input-prefix": 2,
+        "@angular-eslint/use-lifecycle-interface": 2,
+        "@angular-eslint/prefer-output-readonly": 2,
+        "@angular-eslint/component-max-inline-declarations": 2,
+        "@angular-eslint/template/no-call-expression": 2,
+        "@angular-eslint/template/use-track-by-function": 2,
+        "@angular-eslint/use-pipe-transform-interface": 2,
+        "@angular-eslint/no-conflicting-lifecycle": 2,
+        "@angular-eslint/relative-url-prefix": 2,
+        "@angular-eslint/use-component-selector": 2,
+        "@angular-eslint/template/conditional-complexity": 2,
+        "@angular-eslint/use-injectable-provided-in": 2,
+        "@angular-eslint/no-host-metadata-property": 2,
+        "@angular-eslint/no-inputs-metadata-property": 2,
+        "@angular-eslint/no-outputs-metadata-property": 2,
+        "@angular-eslint/no-queries-metadata-property": 2,
+        "@angular-eslint/template/no-distracting-elements": 2,
+        "@angular-eslint/component-class-suffix": 2
       }
     }
   ]
