--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -19,5 +19,6 @@ jobs:
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
           build_configuration: staging
+          base_href: /nasa-images/
           deploy_branch: nasa-images-staging-page
           angular_dist_build_folder: dist/apps/nasa-images
